--- a/home/css/vote.css
+++ b/home/css/vote.css
@@ -2,8 +2,6 @@
 .vote_button {
     background-color: #c92222;   /*dark red 2*/
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -16,8 +14,6 @@
     background-color: #c92222;
     display:none;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -26,8 +22,6 @@
 .voted_image{
     opacity:0.5;
 }
-
-
 
 /* Add a hover effect for buttons */
 .vote_button:hover {
@@ -96,4 +90,27 @@
 @keyframes fadeout {
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
+}
+
+/* Container for flexboxes */
+.row {
+    display: -webkit-flex;
+    display: flex;
+}
+
+/* Create three equal columns that sits next to each other */
+.column {
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding: 10px;
+    height: ; /* Should be removed. Only for demonstration */
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .row {
+      -webkit-flex-direction: column;
+      flex-direction: column;
+    }
 }
